<resources>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">iotv needs permission for camera and audio to record videos.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API</string>
    <string name="app_name">iotv</string>
    <string name="main_activity_label">Record</string>
    <string name="intro_message">Test out recording</string>
    <string name="camera_label">Camera</string>
    <string name="myvideos_label">My Videos</string>
    <string name="login_label">Label</string>
    <string name="login_email_text">Email</string>
    <string name="login_sign_in_with_google">Sign in with Google</string>
    <string name="login_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_password_text">Password</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1805752429746223</string>
</resources>
