<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="tv.mg4.app.LoginActivity">

    <TextView
        android:id="@+id/login_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/login_email_text"
        android:text="@string/login_email_text"/>

    <EditText
        android:id="@+id/login_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/login_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/login_password_text"
        android:text="@string/login_password_text"/>

    <EditText
        android:id="@+id/login_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/login_sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="- or -"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <Button
        android:id="@+id/login_google_button"
        style="@style/GoogleLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/login_sign_in_with_google"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>

    <Button
        android:id="@+id/login_facebook_button"
        style="@style/FacebookLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/com_facebook_button_background_color"
        android:text="@string/login_sign_in_with_facebook"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>
</LinearLayout>